Makes smaller screen use the full width.  Causes an issue with the popout on the left not appearing correctly, but will fix this when I fix the popout buttons and search bar being too wide on small screens.

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -12,6 +12,21 @@ html, body {
  * --------------------------------------------------
  */
 
+
+@media(max-width:1199px){
+    .container {
+        padding-right: 0;
+        padding-left: 0;
+        margin-right: auto;
+        margin-left: auto;
+        width: auto !important;
+    }
+    .row {
+        margin-right: 0;
+    }
+
+}
+
 .hidden-overflow-x {
     overflow-x: hidden !important;
 }
